Actualizacion de cambios de style

--- a/PUBLIC/chat.html
+++ b/PUBLIC/chat.html
@@ -13,7 +13,7 @@
         <h1>WEB CHAT</h1>
     </div>
     <div class="body"> 
-        <P class="msgiauno">Hola IA  </P>
+        <P class="msgiauno">Hola IA 1  </P>
         <P class="mgsiados"> Hola IA 2 </P>
     </div>
 
