--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <link rel="stylesheet" href="chat.css">
+
 </head>
+<script src="chat.js"></script>
+
 <body>
 
     <div class="container">
-    <div class="header">
-        <h1>WEB CHAT</h1>
-    </div>
-    <div class="body"> 
-        <P class="msgiauno">Hola IA 1  </P>
-        <P class="mgsiados"> Hola IA 2 </P>
-    </div>
+        <div class="header">
+            <h1>WEB CHAT</h1>
+        </div>
+        <div class="body">
+            <P class="msgiauno">Hola IA 1 </P>
+            <P class="mgsiados"> Hola IA 2 </P>
+        </div>
 
-    <div class="footer"> 
+        <div class="footer">
             <button>IA 1 </button>
             <button>ELIMINAR CHAT </button>
             <button>IA 2 </button>
-    </div>
+        </div>
 
 
     </div>
 
 
 
-    
+
 </body>
+
 </html>
