--- a/public/index.html
+++ b/public/index.html
@@ -8,30 +8,26 @@
     <link rel="stylesheet" href="chat.css">
 
 </head>
-<script src="chat.js"></script>
-
 <body>
 
     <div class="container">
         <div class="header">
             <h1>WEB CHAT</h1>
         </div>
-        <div class="body">
-            <P class="msgiauno">Hola IA 1 </P>
-            <P class="mgsiados"> Hola IA 2 </P>
+        <div class="body" id="chatBody">
+            
         </div>
 
         <div class="footer">
-            <button>IA 1 </button>
-            <button>ELIMINAR CHAT </button>
-            <button>IA 2 </button>
+            <button id="btnIA1">IA 1 </button>
+            <button id="btnEliminar">ELIMINAR CHAT </button>
+            <button id="btnIA2">IA 2 </button>
         </div>
-
 
     </div>
 
 
-
+    <script src="chat.js"></script>
 
 </body>
 
