Feature exportar a pdf

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
             <button id="btnIA1">IA 1 </button>
             <button id="btnEliminar">ELIMINAR CHAT </button>
             <button id="btnIA2">IA 2 </button>
+            <button id="btnExportar">EXPORTAR PDF</button>
         </div>
 
     </div>
