--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
         <div class="footer">
             <button id="btnIA1">IA 1 </button>
-            <button id="btnEliminar">ELIMINAR CHAT </button>
+            <button class="eliminar" id="btnEliminar">ELIMINAR CHAT </button>
             <button id="btnIA2">IA 2 </button>
 
         </div>
